bk_ida/gccida/g2/count_spilled_pseudo
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_spilled_pseudo/src/reload1.c:2145:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v9 = ( ( unsigned int)( mode_class_0[v6] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_spilled_pseudo/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_spilled_pseudo/src/reload1.c:2177:29: error: use of undeclared identifier 'unk_9F825C'
while ( ( int *)( ( char *)&unk_9F825C + 4 * ( v14 - v13)) != v15 ); 
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_spilled_pseudo/src/obj/reload1.o] Error 1
